add home screen

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -32,5 +32,12 @@
   "passwordNotValid" : "Password must be at least 6 characters",
   "nameLabel" : "Name",
   "nameNotValid" : "Name cannot be empty!",
-  "forgotPassword" : "Forgot password"
+  "forgotPassword" : "Forgot password",
+
+  "@_HOME_PAGE": {},
+  "search": "Search",
+  "likes": "Likes",
+  "rentals": "Rentals",
+  "messages": "Messages",
+  "profil": "Profil"
 }
