fix logout and login

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -40,5 +40,8 @@
   "likes": "Likes",
   "rentals": "Rentals",
   "messages": "Messages",
-  "profil": "Profil"
+  "profil": "Profil",
+
+  "@_PROFIL_PAGE": {},
+  "memberDate": "Member since {}"
 }
