add photo with camera and show

--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -56,5 +56,6 @@
   "adDescriptionLabel": "Ad description",
   "adDescriptionNotValid": "Your description should contain at least 10 characters",
   "camera": "Camera",
-  "gallery": "Gallery"
+  "gallery": "Gallery",
+  "adPhotos": "Add photos"
 }
