--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -6,47 +6,39 @@
   "refresh": "Refresh",
   "errorOccured": "An error occurred please try again",
   "userNotAuthenticated": "User is not authenticated",
-
   "@_WELCOME_PAGE": {},
-  "welcomeText" : "Welcome to BPM",
-
+  "welcomeText": "Welcome to BPM",
   "@_EMAIL_NOT_VERIFIED_PAGE": {},
-  "verifyEmail" : "Please verify your email with the link we sent on your email",
-
+  "verifyEmail": "Please verify your email with the link we sent on your email",
   "@_RESET_PASSWORD_PAGE": {},
-  "resetPassword" : "Reset your password",
-  "resetPasswordInfo" : "Enter your email, we'll send you an email to reset your password",
-  "emailInvalid" : "This email is invalid",
-
+  "resetPassword": "Reset your password",
+  "resetPasswordInfo": "Enter your email, we'll send you an email to reset your password",
+  "emailInvalid": "This email is invalid",
   "@_SIGNUP_PAGE": {},
   "signup": "Sign Up",
   "individual": "An individual",
   "association": "An association",
   "signin": "Sign in",
-  "checkEmailMessage" : "Please Verify your email, by clicking the link sent to you by mail.",
-  "emailLabel" : "Email",
-  "emailHelperText" : "A complete, valid email e.g. joe@gmail.com",
-  "emailNotValid" : "Please ensure the email entered is valid",
-  "textFillIssue" : "Please fill the data correctly!",
-  "passwordLabel" : "Password",
-  "passwordHelperText" : "Password should be at least 6 characters",
-  "passwordNotValid" : "Password must be at least 6 characters",
-  "nameLabel" : "Name",
-  "nameNotValid" : "Name cannot be empty!",
-  "forgotPassword" : "Forgot password",
-
+  "checkEmailMessage": "Please Verify your email, by clicking the link sent to you by mail.",
+  "emailLabel": "Email",
+  "emailHelperText": "A complete, valid email e.g. joe@gmail.com",
+  "emailNotValid": "Please ensure the email entered is valid",
+  "textFillIssue": "Please fill the data correctly!",
+  "passwordLabel": "Password",
+  "passwordHelperText": "Password should be at least 6 characters",
+  "passwordNotValid": "Password must be at least 6 characters",
+  "nameLabel": "Name",
+  "nameNotValid": "Name cannot be empty!",
+  "forgotPassword": "Forgot password",
   "@_HOME_PAGE": {},
   "search": "Search",
   "likes": "Likes",
   "rentals": "Rentals",
   "messages": "Messages",
   "profil": "Profil",
-
   "@_PROFIL_PAGE": {},
   "memberDate": "Member since {}",
   "logout": "Logout",
-
-
   "@_PUBLISH_AD_PAGE": {},
   "postAnAd": "Post an ad",
   "adTitleInfo": "Choose a title for your ad",
@@ -59,5 +51,7 @@
   "gallery": "Gallery",
   "adPhotos": "Add photos",
   "chooseCity": "Choose a city",
-  "enterYourCity": "Enter your city"
+  "enterYourCity": "Enter your city",
+  "locationError": "Can't fetch your location",
+  "publishAd": "Publish your ad"
 }
