--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -5,7 +5,7 @@
   },
   "refresh": "Refresh",
   "errorOccurred": "An error occurred please try again",
-  "noConnectionTitle": "Oops!",
+  "errorTitle": "Oops!",
   "noConnectionMessage": "It seems you're offline. Please connect to the internet to continue.",
   "userNotAuthenticated": "User is not authenticated",
   "next": "Next",
@@ -60,5 +60,8 @@
   "enterYourCity": "Enter your city",
   "locationError": "Can't fetch your location",
   "publishAd": "Publish your ad",
-  "queryTooShortMessage": "3 characters minimum are needed"
+  "queryTooShortMessage": "3 characters minimum are needed",
+  "rentalPriceTitle": "What is your rental price?",
+  "rentalPriceLabel": "Your rental price",
+  "post": "Post"
 }
