US2: create ad details page and image pager.

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -64,5 +64,8 @@
   "enterYourCity": "Enter your city",
   "locationError": "Can't fetch your location",
   "publishAd": "Publish your ad",
-  "queryTooShortMessage": "3 characters minimum are needed"
+  "queryTooShortMessage": "3 characters minimum are needed",
+  "@_AD_DETAIL": {},
+  "description": "Description",
+  "contact": "Contact"
 }
